tests/spec/compile-fail/036_vector_of_interface_access.zn
// category: compile-fail
// profile: freestanding
// purpose: bare interface names cannot be used as collection element types

module tests.fail.vectorOfInterfaceAccess;

import core.result.Result;

enum WriteError {
    Failed,
}

interface Writer {
    fn write(mut self, bytes: ArraySlice<U8>) -> Result<USize, WriteError>;
}

struct WriterList {
    writers: Vector<Writer>, // expected-error: interface name cannot be used as a collection element type; use Box<Writer>
}
